<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|bottom"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Switch
        android:id="@+id/use_prefetcher_switch"
        android:layout_gravity="center"
        android:text="Use prefetcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <Switch
        android:id="@+id/use_gapworker_switch"
        android:layout_gravity="center"
        android:text="Use gapworker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>


    <Button
        android:id="@+id/go_to_list_button"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="Go to list"/>

</LinearLayout>